// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Back Reference > should be simple escaped char without group 1`] = `
{
  "body": {
    "end": 3,
    "expressions": [
      {
        "charCode": 97,
        "end": 1,
        "kind": 6,
        "start": 1,
        "type": "simple",
        "value": "a",
      },
      {
        "charCode": 49,
        "end": 3,
        "kind": 6,
        "start": 2,
        "type": "escaped",
        "value": "1",
      },
    ],
    "kind": 5,
    "start": 1,
  },
  "end": 4,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;

exports[`Back Reference > should parse back reference 1`] = `
{
  "body": {
    "end": 5,
    "group": {
      "body": {
        "charCode": 97,
        "end": 2,
        "kind": 6,
        "start": 2,
        "type": "simple",
        "value": "a",
      },
      "end": 3,
      "kind": 23,
      "specifier": null,
      "start": 1,
      "type": "capturing",
    },
    "kind": 25,
    "start": 1,
  },
  "end": 6,
  "flags": "",
  "kind": 0,
  "start": 0,
}
`;
